# rocket-microservices-api-assignment

./: .env  README.md  init.sh  openapi.json
content_service/: .env  Cargo.toml  Dockerfile  docker-compose.yml  story.csv
content_service/migrations/2021-09-30-112116_create_content/: down.sql  up.sql
content_service/src/: catcher.rs  crud.rs  main.rs  models.rs  routes.rs  schema.rs
scripts/: populate.sh  populate_content.sh  populate_user.sh  populate_user_interaction.sh  regenerate_user.sh
scripts/data/: story.csv  story.json  user.json  user_interactions.json
user_interaction_service/: .env  Cargo.toml  Dockerfile  docker-compose.yml
user_interaction_service/migrations/2021-09-30-173718_create_user_interaction/: down.sql  up.sql
user_interaction_service/src/: connection.rs  crud.rs  main.rs  models.rs  routes.rs  schema.rs
user_service/: .env  Cargo.toml  Dockerfile  docker-compose.yml
user_service/migrations/2021-09-29-112351_create_users/: up.sql
user_service/src/: crud.rs  main.rs  models.rs  routes.rs  schema.rs
