[package]
name = "content_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
derive_more = "0.99.16"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
hyper = { version = "0.14.13", features = ["client"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde_json = "1.0.68"

rocket_okapi = { git = "https://github.com/GREsau/okapi", version = "0.8.0-rc.1", features = ["swagger"] }
# rocket_okapi = { path = "../okapi/rocket-okapi", version = "0.8.0-rc.1", features = ["swagger"] }
okapi = { git = "https://github.com/GREsau/okapi" , version = "0.7.0-rc.1" }
# okapi = { path = "../okapi/okapi", version = "0.7.0-rc.1" }
schemars = { version = "0.8.6", features = ["chrono"] }

